--- a/allhands/Module_Two_Team_Two/index.qmd
+++ b/allhands/Module_Two_Team_Two/index.qmd
@@ -292,31 +292,14 @@ The results from the experiment are summarized in the following table:
 
 - Observations:
 
-NSGA-II had the highest runtime, which is expected given its complexity and the nature of multi-objective optimization tasks.
-Its process of evolving solutions requires significant computational overhead, making it less efficient for simple tasks like
-sorting or coverage evaluation. However, one benefit of the algorithm is that it prioritizes the best tests to run by
-considering multiple factors at once. So, it is optimal for solving problems where the most optimal solution in accordance with
-multiple factors is needed. Also, the results from this algorithm are often more than one test case, so the user is given a
-list of a few optimal test cases to run instead of just one test case.
+NSGA-II had the highest runtime, which is expected given its complexity and the nature of multi-objective optimization tasks. Its process of evolving solutions requires significant computational overhead, making it less efficient for simple tasks like sorting or coverage evaluation. However, one benefit of the algorithm is that it prioritizes the best tests to run by considering multiple factors at once. So, it is optimal for solving problems where the most optimal solution in accordance with multiple factors is needed.
 
-QuickSort, a well-known sorting algorithm, performed significantly faster than NSGA-II, reflecting its efficiency in handling
-ordered data. With its average time complexity of O(N log N), QuickSort proved well-suited for the task, even as the dataset
-size was relatively small. This algorithm produces the top test case according to a ratio of duration divided by the number of
-lines covered. Seeing as that ratio is all that is used to sort the test cases, the results may differ from those produced by
-NSGA-II. This algorithm is effective for simple sorting tasks like when it was given the ratio mentioned above.
+QuickSort, performed significantly faster than NSGA-II, reflecting its efficiency in handling ordered data. With its average time complexity of O(N log N), QuickSort proved well-suited for the task, even as the dataset size was relatively small. This algorithm produces the top test case according to a ratio of duration divided by the number of lines covered. This algorithm is effective for simple sorting tasks like when it was given the ratio mentioned above.
 
-Bucket Sort, with its near-linear time complexity under optimal conditions, demonstrated the fastest performance in this
-experiment, significantly outperforming both NSGA-II and QuickSort on the given dataset. This algorithm produces the top test
-case according to a ratio of duration divided by the number of lines covered. Like with quick sort, since that ratio is all
-that is used to sort the test cases, the algorithm's results may differ from those produced by NSGA-II. This algorithm is
-effective for simple sorting tasks like when it was given the ratio mentioned above. Plus, it does not use recursion like quick
-sort, making it the fastest sorting algorithm in our experiment.
+Bucket Sort, with its near-linear time complexity under optimal conditions, demonstrated the fastest performance in this experiment, significantly outperforming both NSGA-II and QuickSort on the given dataset. This algorithm produces the top test case according to a ratio of duration divided by the number of lines covered. Like with quick sort, since that ratio is all
+that is used to sort the test cases, the algorithm's results may differ from those produced by NSGA-II. This algorithm is effective for simple sorting tasks like when it was given the ratio mentioned above. Plus, it does not use recursion like quick sort, making it the fastest sorting algorithm in our experiment.
 
 
 ## Conclusion
 
-The results of this experiment indicate that, under the tested scenario, NSGA-II did not outperform the algorithms we compared
-it to (QuickSort and Bucket Sort). Given that these algorithms are designed for fundamentally different purposes, the
-performance discrepancy is expected. Our tests were conducted in a context that favored QuickSort & Bucketsort, which is
-inherently more efficient for the sorting tasks at hand. Consequently, while NSGA-II excels in multi-objective optimization, it
-is not suited for tasks where traditional sorting algorithms like QuickSort are more appropriate.
+The results of this experiment indicate that, under the tested scenario, NSGA-II did not outperform the algorithms we compared it to (QuickSort and Bucket Sort). Given that these algorithms are designed for fundamentally different purposes, the performance discrepancy is expected. Our tests were conducted in a context that favored QuickSort & Bucketsort, which is inherently more efficient for the sorting tasks at hand. Consequently, while NSGA-II excels in multi-objective optimization, it is not suited for tasks where traditional sorting algorithms like QuickSort are more appropriate.
